<resources>
    <string name="app_name">Fastisha App</string>
    <string name="new_user_sign_up">New user?Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="full_names">Full Names</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="emailaddress">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="passwordsignup">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="process">Process</string>
    <string name="todo">TODO</string>
    <string name="this_app_was_developed_by">This App was developed by</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="agent">Agent</string>
    <string name="customers">Customers</string>
    <string name="log_out">Log Out</string>
    <string name="agents">Agents</string>
    <string name="back">Back</string>
    <string name="currentTransaction">Current transaction</string>
    <string name="delivery">Delivery</string>
    <string name="price">Price</string>
    <string name="totalTransaction">Total Transaction</string>
    <string name="Welcome">Welcome</string>
    <string name="recentTransaction">Recent Transaction</string>
    <string name="ordersOverview">Orders Overview</string>
    <string name="view">View</string>
    <string name="statistics">Statistics</string>
    <string name="addAgent">Add Agent</string>
    <string name="selectImage">Select Image</string>
    <string name="nationalID">National ID</string>
    <string name="customerDetails">Customer Details</string>
    <string name="mapFutureUpdate">Map will display here in the future update</string>
</resources>