<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Hardcoded text"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome back to Fastisha"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="328dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="51dp"
        android:backgroundTint="#28605D5D"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="325dp"
        android:layout_height="49dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="49dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorHighlight="#0091EA"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="288dp"
        android:layout_height="53dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="47dp"
        android:text="@string/log_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColorLink="@color/black"
        app:iconTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="193dp"
        android:layout_height="37dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="31dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/new_user_sign_up"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>