<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:text="Enter your details to get started."
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="309dp"
        android:layout_height="58dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/full_names"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/emailaddress"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="290dp"
        android:layout_height="53dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="36dp"
        android:background="#00B8D4"
        android:backgroundTint="#1F8DE1"
        android:text="@string/sign_up"
        android:textColor="#4E342E"
        android:textColorHighlight="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="309dp"
        android:layout_height="52dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/passwordsignup"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmail"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="299dp"
        android:layout_height="52dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHint="#8D6E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="By continuing, you agree to the Terms of Use. Read our Privacy Policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        tools:ignore="HardcodedText,VisualLintBounds" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="20dp"
        android:text="Already have an account? Log In"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <ProgressBar
        android:id="@+id/signupProgressBar"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>